[package]
name = "bolt"
version = "0.1.0"
edition = "2021"
description = "A lightning-fast, terminal-based task runner."
license = "MIT"
repository = "https://github.com/erik/bolt"
keywords = ["cli", "task-runner", "tui", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.26.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
fuzzy-matcher = "0.3.7"
anyhow = "1.0"
ctrlc = "3.4"
